--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,6 @@
 [build-system]
 requires = [
 	"flit_core >=3.2,<4",
-	"python_version >= '3.7'"
 	]
 build-backend = "flit_core.buildapi"
 
@@ -11,8 +10,9 @@ pythonpath = [
 ]
 
 [project]
+requires-python = ">= 3.7"
 name = "seqparser"
-authors = [{name = "Han Chen", email = "han.chen@ucsf.edu"}]
+authors = [{name = "Yagmur Doruk Polcyn", email = "yagmur.dorukpolcyn@ucsf.edu"}]
 readme = "README.md"
 license = {file = "LICENSE"}
 classifiers = ["License :: OSI Approved :: MIT License"]
